2007-08-13  Michael Poole <mdpoole@troilus.org>

	* ircd/s_user.c (whipser): CNOTICEs should not trigger away
	messages, only CPRIVMSGs.

2007-08-13  Michael Poole <mdpoole@troilus.org>

	* ircd/m_who.c (m_who): Reorder responses and change the
	ERR_QUERYTOOLONG parameter to be consistent with m_whois().
	
2007-08-13  Michael Poole <mdpoole@troilus.org>

	* ircd/s_user.c (register_user): Initialize umodev[] in a
	C89-compatible way.  (gcc 4.1.2 warned about it.)

2007-08-13  Michael Poole <mdpoole@troilus.org>

	* ircd/m_names.c (do_names): Add NAMES_DEL to comment.  Avoid use
	of strcat().  Get rid of ms_names(), which was basically a copy of
	m_names(), and merge the "showingdelayed" changes into m_names().
	Replace the recursion with iteration.

	* ircd/parse.c (msgtab): Use m_names(), not ms_names().

2007-08-08  Michael Poole <mdpoole@troilus.org>

	* ircd/s_auth.c (report_iauth_conf): Remove end-of-stats message;
	m_stats() already does that.

	(report_iauth_stats): Likewise.

2007-08-08  Michael Poole <mdpoole@troilus.org>

	* include/res.h (irc_in_addr_is_ipv4): Fix classification of
	addresses like 0.0.0.0.

2007-07-21  Perry Lorier <isomer@undernet.org>

	* ircd/s_user.c: Move set_nick_name() to use set_user_mode(),
	set_user_mode() now interprets +r usermodes properly (and ignores
	them from non servers).  This fixes a problem where remote users
	weren't being counted properly anymore.

2007-07-20  Kevin L. Mitchell  <klmitch@mit.edu>

	* ircd/m_gline.c: create abs_expire() macro to convert an expire
	timestamp from the network into an absolute time, if needed;
	rename expire_off to expire globally, since it now represents an
	absolute expiration time; use expire - CurrentTime in gline
	forwarding statements; in ms_gline(), use abs_expire() to convert
	network expiration timestamp into absolute timestamp; in
	mo_gline(), add CurrentTime to oper-provided expiration offset to
	convert to absolute timestamp
